Adding Ui improvements

--- a/web/templates/add-resume.html
+++ b/web/templates/add-resume.html
@@ -157,13 +157,19 @@
                       <div class="col-md-9">
                         <div class="row">
                           <div class="col-md-6">
+                            <div class="form-group">
                             {{request.user.firstName}}
+                            </div>
                           </div>
                           <div class="col-md-6">
+                            <div class="form-group">
                             {{request.user.lastName}}
+                            </div>
                           </div>
                           <div class="col-md-6">
+                          <div class="form-group">
                             {{request.user.preferredName}}
+                            </div>
                           </div>
                         </div>
                       </div>
