--- a/web/templates/application-details.html
+++ b/web/templates/application-details.html
@@ -228,9 +228,7 @@
                         <p>Credit Completed: {{jobApplication.candidate.creditCompleted}}</p>
                         <p>Credit Left: {{jobApplication.candidate.creditLeft}}</p>
                         <p>GPA: {{jobApplication.candidate.gpa}}</p>
-                        <p>International Student: {{jobApplication.candidate.internationalStudent}}</p>
-                        <p>Willingness to travel: {{jobApplication.candidate.travel}}</p>
-                        <p>Can commit to 16 months internships: {{jobApplication.candidate.timeCommitment}}</p>
+                        <p>Citizenship status: {{jobApplication.candidate.citizenship}}</p>
                       </div>
                     </div>
                     <div class="edication-background details-section">
@@ -286,6 +284,8 @@
                           <li><span>Phone number:</span> {{jobApplication.candidate.user.phoneNumber}}</li>
                           <li><span>Email address:</span> {{jobApplication.candidate.user.email}}</li>
                           <li><span>Is email confirmed:</span> {{jobApplication.candidate.user.is_email_confirmed}}</li>
+                          <li><span>Concordia Email on file:</span> {{jobApplication.candidate.concordia_email}}</li>
+                          <li><span>Is Concordia Email confirmed:</span> <h5><b>{{jobApplication.candidate.is_concordia_email_confirmed}} </b></h5></li>
                         </ul>
                       </div>
                       {% endif %}
@@ -298,11 +298,12 @@
                           <li><span>Phone number:</span> {{jobApplication.candidate.user.phoneNumber}}</li>
                           <li><span>Email address:</span> {{jobApplication.candidate.user.email}}</li>
                           <li><span>Is email confirmed:</span> {{jobApplication.candidate.user.is_email_confirmed}}</li>
+                          <li><span>Concordia Email on file:</span> {{jobApplication.candidate.concordia_email}}</li>
+                          <li><span>Is Concordia Email confirmed:</span> <h5><b>{{jobApplication.candidate.is_condia_email_confirmed}} </b></h5></li>
                         </ul>
                       </div>
                       {% endif %}
                       <div class="buttons">
-                        <a href="#" class="button contact-button" data-toggle="modal" data-target="#exampleModal">Contact Me</a>
                         <a href="/getFileWithAuth/2/{{jobApplication.pk}}/" class="button cover-download"><i data-feather="download"></i>Cover Letter</a>
                         <a href="/getFileWithAuth/3/{{jobApplication.pk}}/" class="button contact-download"><i data-feather="download"></i>Transcript</a>
                       </div>
