--- a/web/templates/application-details.html
+++ b/web/templates/application-details.html
@@ -198,7 +198,7 @@
               <div class="title-and-info">
                 <div class="title">
                   <div class="title-body">
-                    <h4> {% if preferredName %} {{preferredName}} ({{jobApplication.candidate.user.firstName}}){% else %}{{jobApplication.candidate.user.firstName}} {% endif %} {{jobApplication.candidate.user.lastName}} </h4>
+                    <h4> {% if preferredName != "" %} {{preferredName}} ({{jobApplication.candidate.user.firstName}}){% else %}{{jobApplication.candidate.user.firstName}} {% endif %} {{jobApplication.candidate.user.lastName}} </h4>
                     <div class="info">
                       <span class="candidate-designation"><i data-feather="check-square"></i>Application Status: {{jobApplication.status}}</span>
                     </div>
@@ -279,10 +279,11 @@
                     {% if user.user_type == 4 or user.user_type == 1 %}
                     <div class="information-and-contact">
                       <div class="information">
-                        <h4>Information</h4>
+                        <h4>Contact</h4>
+                        <h4>Visible to others only if selected for interview except Co-op review staff</h4>
                         <ul>
                           <li><span>Phone number:</span> {{jobApplication.candidate.user.phoneNumber}}</li>
-                          <li><span>Email address:</span> {{jobApplication.candidate.user.email}}</li>
+                          <li><span>Main Email address:</span> {{jobApplication.candidate.user.email}}</li>
                           <li><span>Is email confirmed:</span> {{jobApplication.candidate.user.is_email_confirmed}}</li>
                           <li><span>Concordia Email on file:</span> {{jobApplication.candidate.concordia_email}}</li>
                           <li><span>Is Concordia Email confirmed:</span> <h5><b>{{jobApplication.candidate.is_concordia_email_confirmed}} </b></h5></li>
@@ -290,17 +291,20 @@
                       </div>
                       {% endif %}
 
-                      {% if user.user_type == 2 and jobApplication.status != "Submitted" and  jobApplication.status != "Not Selected"%}
+                    {% if user.user_type == 2 %}
                     <div class="information-and-contact">
                       <div class="information">
-                        <h4>Information</h4>
+                        <h4>Contact</h4>
+                        <h4>Visible only if selected for interview</h4>
+                        {% if user.user_type == 2 and jobApplication.status != "Submitted" and  jobApplication.status != "Not Selected"%}
                         <ul>
                           <li><span>Phone number:</span> {{jobApplication.candidate.user.phoneNumber}}</li>
-                          <li><span>Email address:</span> {{jobApplication.candidate.user.email}}</li>
+                          <li><span>Main Email address:</span> {{jobApplication.candidate.user.email}}</li>
                           <li><span>Is email confirmed:</span> {{jobApplication.candidate.user.is_email_confirmed}}</li>
                           <li><span>Concordia Email on file:</span> {{jobApplication.candidate.concordia_email}}</li>
                           <li><span>Is Concordia Email confirmed:</span> <h5><b>{{jobApplication.candidate.is_condia_email_confirmed}} </b></h5></li>
                         </ul>
+                        {% endif %}
                       </div>
                       {% endif %}
                       <div class="buttons">
