Github link and ranking workflow improvements

--- a/web/templates/application-details.html
+++ b/web/templates/application-details.html
@@ -185,6 +185,12 @@
         </row>
         </form>
       {% endif %}
+      {% if user.user_type == 4 and not showButton and showInterview%}
+      <p> We have notified the candidate that they have been selected for an interview. Please let the employer reach out to them by email or phone. </P>
+      <p> <a href="/jobApplication"> Tip: You can find a list of all selected candidates by going into your <b>Dashboard->Manage Applications->Filter Interview->Get Contact Info</b></a> </p>
+      <p> Once you have interviewed the candidate, please rank them <a href="/employerRanking"> <b>here</b></a> by order of preference. The candidate will also rank you. </P>
+      <p> Our algorithm will generate the optimal match on Match day. </p>
+      {% endif %}
       {% if user.user_type == 2 and showButton %}
         <form method="POST" class="candidate-details">
         {% csrf_token %}
@@ -193,6 +199,13 @@
         <input type="submit" class="add-new-field" formnovalidate value="Reject" name="Reject" id="Reject">
         </row>
         </form>
+      {% endif %}
+      {% if user.user_type == 2 and not showButton%}
+      <p> We have notified the candidate that they have been selected for an interview. Please reach out to them by email or phone. </P>
+      <p> <a href="/jobApplication"> Tip: You can find a list of all selected candidates by going into your <b>Dashboard->Manage Applications-></b>Filter Selected Interview->Get Contact Info</a> </p>
+      <p> <a href="/manageJobs"> To find candidates for a specific job, <b>navigate to the job </b>and click on view candidates->Filter Selected for interview->Get Contact Info </a><p>
+      <p> Once you have interviewed the candidate, please rank them <a href="/employerRanking"> <b>here</b></a> by order of preference. The candidate will also rank you. </P>
+      <p> Our algorithm will generate the optimal match on Match day. </p>
       {% endif %}
             <div class="candidate-details">
               <div class="title-and-info">
