--- a/web/templates/email-interview-candidate.html
+++ b/web/templates/email-interview-candidate.html
@@ -8,6 +8,8 @@ Visit http://{{ domain }}/job-details/{{job.pk}} for more details.
 
 If you have not heard from your prospect employer within 3 business days, please reach out to Concordia Co-op office. 
 
+Once you have completed your interview, visit the Rank Page for next steps.
+
 The Concordia ACE Team
 Please do not reply this unmonitored email address.
 Never made a {{user.email}} ACE account? Prevent identity theft and let us know. You may suspend this account here: http://{{ domain }}{% url 'password_reset'  %}
