--- a/web/templates/home-4.html
+++ b/web/templates/home-4.html
@@ -450,6 +450,7 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <p class="copyright-text">Software developped by Concordia Capstone ACE team. <a href= "#"></a> 2020</p>
+                    <p class="copyright-text">Open sourced Code: <a href="https://github.com/MattYu/django-docker-nginx-postgres-letsEncrypt-jobBoard">github.com/MattYu/django-docker-nginx-postgres-letsEncrypt-jobBoard</a></p>
                     <p class="copyright-text"><a href= "#">Style Templates used under license, Oficiona 2019</a></p>
                   </div>
                   <div class="col-lg-6">
