--- a/web/templates/joblist_view.html
+++ b/web/templates/joblist_view.html
@@ -12,15 +12,18 @@
                   <div class="info">
                     <span class="company"><a href="company-details/{{job.company.pk}}"><i data-feather="briefcase"></i>{{job.company.name}}</a></span>
                     <span class="office-location"><a href="#"><i data-feather="map-pin"></i>{{job.location}}</a></span>
-                    <span class="job-type full-time"><a href="#"><i data-feather="clock"></i>{{job.jobtype}}</a></span>
+                    <span class="job-type full-time"><a href="#"><i data-feather="clock"></i>Deadline: {{job.expirationDate}}</a></span>
                   </div>
                 </div>
                 <div class="more">
                   <div class="buttons">
-                    <a href="add-resume/{{job.pk}}/" class="button">Apply Now</a>
-                    <a href="#" class="favourite"><i data-feather="heart"></i></a>
+                      {% if job.status != "Closed" and job.status != "Filled" and job.status != "Partially Filled"%}
+                      <a target="_blank" rel="noopener noreferrer" href="/add-resume/{{job.pk}}/" class="button">Apply Now</a>
+                      {% else %}
+                      <a href="/" class="button">Closed</a>
+                      {% endif %}
                   </div>
-                  <p class="deadline">Deadline: {{job.expirationDate}}</p>
+                  <p class="deadline">Status: {{job.status}}</p>
                 </div>
               </div>
             </div>
